==> networkfusion/usb64/src/port_stm32f7/common/stm32fxx_hcd.c <==
#include "tusb_option.h"
#include "host/hcd.h"
#include "host/usbh.h"
#include "stm32f7xx_hal.h"
#include "device/dcd.h"
#define NUM_PIPES 11

void hcd_device_close(uint8_t rhport, uint8_t dev_addr)
{
    (void)rhport;
    for (int i = 0; i < NUM_PIPES + 1; i++)
    {
        if (hhcd.hc[i].dev_addr == dev_addr && hhcd.hc[i].max_packet > 0)
        {
            TU_LOG3("Closing pipe %d\n", i);
            HAL_HCD_HC_Halt(&hhcd, i);
            tu_memclr(&hhcd.hc[i], sizeof(HCD_HCTypeDef));
        }
    }
}

bool hcd_init(uint8_t rhport)
{
    (void)rhport;
    HAL_StatusTypeDef res = HAL_ERROR;
    hhcd.Instance = USB_OTG_FS;
    hhcd.Init.Host_channels = NUM_PIPES;
    hhcd.Init.dma_enable = 0;
    hhcd.Init.low_power_enable = 0;
    hhcd.Init.phy_itface = HCD_PHY_EMBEDDED;
    hhcd.Init.Sof_enable = 0;
    hhcd.Init.speed = HCD_SPEED_FULL;
    hhcd.Init.vbus_sensing_enable = 0;
    hhcd.Init.lpm_enable = 0;
    res = HAL_HCD_Init(&hhcd);
    if (res == HAL_OK)
    {
        res = HAL_HCD_Start(&hhcd);
    }
    HAL_NVIC_EnableIRQ(OTG_FS_IRQn);
    return (res == HAL_OK);
}

bool hcd_edpt_open(uint8_t rhport, uint8_t dev_addr, tusb_desc_endpoint_t const *ep_desc)
{
    (void)rhport;
    TU_LOG3("%s\n", __FUNCTION__);
    int ret = HAL_OK;

    uint8_t ep_type = EP_TYPE_CTRL;
    switch (ep_desc->bmAttributes.xfer)
    {
    case TUSB_XFER_CONTROL:
        ep_type = EP_TYPE_CTRL;
        break;
    case TUSB_XFER_ISOCHRONOUS:
        ep_type = EP_TYPE_ISOC;
        break;
    case TUSB_XFER_BULK:
        ep_type = EP_TYPE_BULK;
        break;
    case TUSB_XFER_INTERRUPT:
        ep_type = EP_TYPE_INTR;
        break;
    }
    uint8_t ch_num = _alloc_pipe();
    tu_memclr(&hhcd.hc[ch_num], sizeof(HCD_HCTypeDef));
    TU_ASSERT(ep_desc->wMaxPacketSize > 0); //FIXME?, I relay on mps > 0 for pipe allocation
    ret = HAL_HCD_HC_Init(&hhcd, ch_num, ep_desc->bEndpointAddress, dev_addr, HAL_HCD_GetCurrentSpeed(&hhcd), ep_type, ep_desc->wMaxPacketSize);
    TU_LOG3("Opened pipe for devaddr:%d epaddr:%02x in slot %d\n", dev_addr, ep_desc->bEndpointAddress, ch_num);
    return (ret == HAL_OK);
}

bool hcd_setup_send(uint8_t rhport, uint8_t dev_addr, uint8_t const setup_packet[8])
{
    (void)rhport;
    uint8_t ch_num = _find_pipe(dev_addr, 0x00);

    HAL_StatusTypeDef ret = HAL_HCD_HC_SubmitRequest(&hhcd,
                                                     ch_num,
                                                     0,
                                                     EP_TYPE_CTRL,
                                                     0,
                                                     (uint8_t *)setup_packet,
                                                     8,
                                                     0);
    return ret == HAL_OK;
}

bool hcd_edpt_xfer(uint8_t rhport, uint8_t dev_addr, uint8_t ep_addr, uint8_t *buffer, uint16_t buflen)
{
    (void)rhport;

    tusb_dir_t const ep_dir = tu_edpt_dir(ep_addr);
    uint8_t ch_num = _find_pipe(dev_addr, ep_addr);
    TU_LOG2("hcd_edpt_xfer on pipe for devaddr:%d epaddr:%02x in slot %d, ep_type %d, ep_dir %d, len %d, togglein %d dir bool %d\n",
            dev_addr, ep_addr, ch_num, hhcd.hc[ch_num].ep_type, ep_dir, buflen, hhcd.hc[ch_num].toggle_in, (ep_dir == TUSB_DIR_IN) ? 1 : 0);

    if (hhcd.hc[ch_num].urb_state == URB_NOTREADY || hhcd.hc[ch_num].urb_state == URB_NYET || (hhcd.hc[ch_num].state != HC_IDLE && hhcd.hc[ch_num].state != HC_XFRC))
    {
        TU_LOG1("Error: Endpoint %02x is busy, urb: %02x hc: %02x\n", ep_addr, hhcd.hc[ch_num].urb_state, hhcd.hc[ch_num].state);
        TU_ASSERT(0);
    }

/*
    //FXIME. STM32F7 expects packets in multiples of maxpacket size. TinyUSB doesnt always do this so can overflow buffers
    if ((ep_dir == TUSB_DIR_IN && (buflen % hhcd.hc[ch_num].max_packet != 0)))
    {
        TU_ASSERT(buflen < sizeof(_local_buffer));
        user_buff = buffer;
        user_len = buflen;
        buffer = _local_buffer;
    }
    else
    {
        user_buff = NULL;
    }
*/

    HAL_StatusTypeDef ret = HAL_HCD_HC_SubmitRequest(&hhcd,
                                                     ch_num,
                                                     (ep_dir == TUSB_DIR_IN) ? 1 : 0,
                                                     hhcd.hc[ch_num].ep_type,
                                                     1,
                                                     buffer,
                                                     buflen,
                                                     0);
                                            
    return (ret == HAL_OK);
}
